Year 2 - I added more elements. My power grows with my dedication and hard work

--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
 body {
     background-color: #F8F7FF;
-    text-align: center
+    text-align: center;
+}
+
+.gecko {
+    font-family: fantasy;
 }
