Year 3 - I added list elements. That code didn't seem very dry. I wonder if there is something I could do about it in the Hungry for More section

--- a/main.css
+++ b/main.css
@@ -6,3 +6,11 @@ body {
 .gecko {
     font-family: fantasy;
 }
+
+.secret {
+    opacity: 0.5;
+}
+
+ul, #container {
+    list-style-type: none;
+}
